// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hasSlottedAnchor: false, isActive: false and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-decoration: underline;
  text-decoration-color: transparent;
  cursor: pointer;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
a::-moz-focus-inner {
  border: 0;
}
a:focus {
  outline: 0;
}
a:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: false, isActive: true and theme: auto 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
a::-moz-focus-inner {
  border: 0;
}
a:focus {
  outline: 0;
}
a:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media (prefers-color-scheme: dark) {
  a {
    color: #FBFCFF;
  }
  a:focus-visible {
    outline-color: #1A44EA;
  }
}

@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: false, isActive: true and theme: dark 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
a::-moz-focus-inner {
  border: 0;
}
a:focus {
  outline: 0;
}
a:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: false, isActive: true and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
a {
  all: unset;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px);
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px);
  border-radius: 4px;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
  text-decoration: underline;
  text-decoration-color: inherit;
  cursor: default;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
a::-moz-focus-inner {
  border: 0;
}
a:focus {
  outline: 0;
}
a:focus-visible {
  outline: 2px solid #1A44EA;
  outline-offset: -2px;
}
@media(hover:hover) {
  a:hover {
    text-decoration-color: inherit;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: true, isActive: false and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: 4px !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-decoration: underline !important;
  text-decoration-color: transparent !important;
  cursor: pointer !important;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid #1A44EA !important;
  outline-offset: -2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: true, isActive: true and theme: auto 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: 4px !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid #1A44EA !important;
  outline-offset: -2px !important;
}
@media (prefers-color-scheme: dark) {
  ::slotted(a:focus-visible) {
    outline-color: #1A44EA !important;
  }
  ::slotted(a) {
    color: #FBFCFF !important;
  }
}

@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: true, isActive: true and theme: dark 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: 4px !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #FBFCFF !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid #1A44EA !important;
  outline-offset: -2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hasSlottedAnchor: true, isActive: true and theme: light 1`] = `
":host {
  display: grid;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
  padding: calc(clamp(8px, 0.5vw + 6px, 16px) + 2px) calc(clamp(8px, 0.5vw + 6px, 16px) + 4px) !important;
  margin: -2px calc(clamp(8px, 0.5vw + 6px, 16px) * -1 - 4px) !important;
  border-radius: 4px !important;
  font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  color: #010205 !important;
  text-decoration: underline !important;
  text-decoration-color: inherit !important;
  cursor: default !important;
  transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1) !important;
}
::slotted(a::-moz-focus-inner) {
  border: 0 !important;
}
::slotted(a:focus) {
  outline: 0 !important;
}
::slotted(a:focus-visible) {
  outline: 2px solid #1A44EA !important;
  outline-offset: -2px !important;
}
@media(hover:hover) {
  ::slotted(a:hover) {
    text-decoration-color: inherit !important;
  }
}
"
`;
